--- a/style.css
+++ b/style.css
@@ -25,6 +25,14 @@ h2{
     background-color: aquamarine;
 }
 
+.container-box{
+    width: 500px;
+    padding: 5rem 0 5rem 0;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .box{
     width: 50px;
     height: 50px;
@@ -32,5 +40,5 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    border-radius: 5px;
 }
